--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,18 @@
             <version>1.0-10</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.payneteasy</groupId>
+            <artifactId>api-servlet</artifactId>
+            <version>1.0-4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
