--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.payneteasy</groupId>
     <artifactId>jetty-util</artifactId>
-    <version>1.0-6-SNAPSHOT</version>
+    <version>1.0-6</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,7 +18,7 @@
         <connection>scm:git:git@github.com:evsinev/jetty-util.git</connection>
         <developerConnection>scm:git:git@github.com:evsinev/jetty-util.git</developerConnection>
         <url>https://github.com/evsinev/jetty-util</url>
-        <tag>HEAD</tag>
+        <tag>jetty-util-1.0-6</tag>
     </scm>
 
     <distributionManagement>
