--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <logback.version>1.1.11</logback.version>
         <slf4j.version>1.7.25</slf4j.version>
-        <jetty.version>9.4.43.v20210629</jetty.version>
-        <prometheus.version>0.9.0</prometheus.version>
+        <jetty.version>9.4.52.v20230823</jetty.version>
+        <prometheus.version>0.16.0</prometheus.version>
     </properties>
 
     <scm>
@@ -158,7 +158,13 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.6</version>
+            <version>2.10.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>1.11.4</version>
         </dependency>
 
     </dependencies>
