--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <logback.version>1.4.14</logback.version>
+        <logback.version>1.2.13</logback.version>
         <slf4j.version>1.7.36</slf4j.version>
         <jetty.version>9.4.57.v20241219</jetty.version>
         <prometheus.version>0.16.0</prometheus.version>
@@ -70,12 +70,14 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
             <version>${logback.version}</version>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
